text-align big fixed

--- a/src/assets/style/home_style.scss
+++ b/src/assets/style/home_style.scss
@@ -198,18 +198,3 @@ body {
 
 .player {
 }
-
-.footer-container {
-  position: absolute;
-  width: 100%;
-  height: 18vh;
-}
-
-.footer-stereo {
-  position: relative;
-
-  font-family: BigJohnBold;
-  font-weight: bold;
-  color: $light;
-  font-size: 3em;
-}
