--- a/src/assets/style/nav_style.scss
+++ b/src/assets/style/nav_style.scss
@@ -157,3 +157,28 @@ $light: #fffdf2;
 .fade-leave-to {
   opacity: 0;
 }
+
+.footer-container {
+  position: absolute;
+  width: 100%;
+  height: 18vh;
+
+  text-align: center;
+}
+
+.footer-stereo {
+  position: relative;
+  top: 1vh;
+
+  font-family: BigJohnBold;
+  font-weight: normal;
+  color: $light;
+  font-size: 2.5em;
+  letter-spacing: 0.35em;
+
+  -webkit-transition: all 0.75s ease-in-out;
+  transition: all 0.75s ease-in-out;
+  &:hover {
+    color: $yellow;
+  }
+}
